--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,12 @@
     margin: 0;
 }
 
-html, body, main, .left-col, #main-left-col {
+/* html, body, main, .left-col, #main-left-col {
     height: 100%;
-}
+} */
 
 body {
-    font: 14px/20px 'Roboto Mono',monospace;
-   /* font-size: 11.2px;
-    */
+    font: 14px/20px 'Roboto Mono',monospace;   
 }
 
 #main-left-col{
@@ -29,7 +27,7 @@ form p {
 /* left column textarea and droparea */
 #drop-area {
     width: 90%;
-    height: 50%;
+    height: 280px;
     margin-top: 5px;
     position: relative;
     border: 4px dashed #999799;
@@ -63,7 +61,7 @@ button:hover{
 }
 
 .left-col textarea {
-    height: 50%;
+    height: 200px;
     resize: none;
     padding: 10px;
 }
