--- a/public/styles.css
+++ b/public/styles.css
@@ -13,12 +13,32 @@ body {
     */
 }
 
-#main-left-col{
+/* LAYOUT STYLES / LAYOUT CONTAINERS */
+
+main {
+    display: flex; 
+    align-content: stretch;
+}
+
+
+#main-left-col{    
+    flex-basis: 30%;
     background:#f2f4f8;
     color: #424242;
 }
 
-form p {
+#main-right-col {
+    width: 100%;
+    margin: 0;
+    padding: 10px 25px;
+}
+
+form {
+    display: flex; 
+    flex-direction: column;
+}
+
+#drop-area p {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -53,13 +73,7 @@ button {
 }
 
 button:hover{
-    opacity: .9;
-}
-
-#main-right-col {
-    width: 100%;
-    margin: 0;
-    padding: 10px 25px;
+    opacity: .8;
 }
 
 .left-col textarea {
