--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,8 @@
+/* Media queries used: one (min-width 480px) */
+
 html {
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 *,
@@ -10,15 +13,21 @@ html {
     margin: 0;
 }
 
+a,
+a:visited {
+    color: inherit;
+}
 
-html, body, main, .left-col, #main-left-col {
-    height: 100%;
+@media(min-width: 768px) {
+    html, body, main, .left-col, #main-left-col {
+        height: 100%;
+    }
 }
 
 html {
     box-sizing: border-box;
   }
-  
+
   *,
   *::before,
   *::after {
@@ -30,36 +39,66 @@ body {
     */
     max-width: 52rem;
     margin: 0 auto;
+    padding: 0 1rem;
  
 }
 
 header {
-    height: 20%;
+    padding: 0 5px 20px;
     overflow: hidden; /* prevent margin collapsing */
 }
+
+@media (min-width: 768px) and (min-height: 700px ) { 
+    
+    header {
+        height: 20%;
+        padding: 0;
+    }
+
+ }
+
+
 
 /* LAYOUT STYLES / LAYOUT CONTAINERS */
 
 main {
-    display: flex;
-    align-content: stretch;
-    height: 80%;
     padding-bottom: 20px;
 }
 
+@media (min-width: 768px) {
+    main {
+        display: flex;
+        align-content: stretch;
+        height: 80%;
+    }
+}
 
-#main-left-col{
-    width: 40%;
-    /* background:#f2f4f8; */
+
+#main-left-col {
     color: #000;
+    padding: 0 5px;
+    margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+    #main-left-col {
+        width: 40%;
+        padding: 0;
+        margin-bottom: 0;
+    }
 }
 
 #main-right-col {
-    width: 60%;
     margin: 0;
-    padding: 0 25px;
+    padding: 0 10px;
     display: flex;
     flex-direction: column;
+}
+
+@media (min-width: 768px) {
+    #main-right-col {
+        width: 60%;
+    }
 }
 
 form {
@@ -79,6 +118,7 @@ form {
 #drop-area {
     width: 100%;
     height: 40%;
+    min-height: 100px;
    
     position: relative;
     border: 3px dashed #000;
@@ -111,27 +151,46 @@ button:hover{
     padding: 10px;
     font-size: .8rem;
     border: 2px solid #000;
+    min-height: 10rem;
 }
 
 .solution {
+    padding: 1rem;
+    min-height: 300px;
     flex-grow: 1;
-    width: 100%;
-    height: auto;
+   
     overflow: auto;
     resize: none;
-    height: 60%;
     border: 2px solid #000;
 }
 
 .message {
     height: 50px;
-    background: #000;
+    background: none;
     display: block;
     width: 100%;
     line-height: 50px;
     font-size: 15px;
     text-align: center;
-    color: #fff;
+    color: #000;
     margin-bottom: 20px;
-    transition: all 1s ease-out;
+}
+
+@media (min-width: 768px) {
+    .message {
+        background: #000;
+        color: #fff;
+    }
+}
+
+/* ||utility Classes */
+
+/*  *devices below 768px width and sm size screens*/
+
+
+/* show only if screen >= 768px width */
+@media (max-width: 767px) {
+    .sm-d-none {
+        display: none; 
+    }
 }
