--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,16 @@
 /* Media queries used: one (min-width 480px) */
 
 html {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-size: 16px;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
     padding: 0;
     margin: 0;
 }
@@ -25,13 +27,15 @@ a:visited {
 }
 
 html {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
 
   *,
   *::before,
   *::after {
-    box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
   }
 
 body {
@@ -67,8 +71,11 @@ main {
 
 @media (min-width: 768px) {
     main {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-content: stretch;
+        -ms-flex-line-pack: stretch;
+            align-content: stretch;
         height: 80%;
     }
 }
@@ -91,8 +98,13 @@ main {
 #main-right-col {
     margin: 0;
     padding: 0 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 @media (min-width: 768px) {
@@ -102,14 +114,21 @@ main {
 }
 
 form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 #drop-area p {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     padding: 10px;
     text-align: center;
 }
@@ -157,7 +176,9 @@ button:hover{
 .solution {
     padding: 1rem;
     min-height: 300px;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
    
     overflow: auto;
     resize: none;
