update shown text based on size

--- a/public/styles.css
+++ b/public/styles.css
@@ -214,4 +214,12 @@ button:hover{
     .sm-d-none {
         display: none; 
     }
+   
+}
+
+@media (min-width: 768px) {
+    .md-d-none {
+        display: none; 
+    }
+   
 }
